correct css codes

--- a/index.html
+++ b/index.html
@@ -5,122 +5,126 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Akademnashr sayti</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <header>
-      <a href="index.html">
-        <img src="./images/logo.svg" alt="logo" width="277" height="58">
-      </a>
-      <nav>
-        <ul class="menyu">
-          <li><a href="#">Bosh sahifa</a></li>
-          <li><a href="#">Kitoblar</a></li>
-          <li><a href="#">Aksiyalar</a></li>
-          <li><a href="#">Kontaktlar</a></li>
-        </ul>
-      </nav>
-      <a href="#" class="header-btn">Ro'yxatdan o'tish</a>
-    </header>
-
-    <main>
-      <section class="block">
-        <div class="box">
+    <div class="wrapper">
+      <header>
+        <a href="index.html">
+          <img src="./images/logo.svg" alt="logo" width="277" height="58">
+        </a>
+        <nav>
+          <ul class="menyu">
+            <li><a href="#">Bosh sahifa</a></li>
+            <li><a href="#">Kitoblar</a></li>
+            <li><a href="#">Aksiyalar</a></li>
+            <li><a href="#">Kontaktlar</a></li>
+          </ul>
+        </nav>
+        <a class="header-btn" href="#">Ro'yxatdan o'tish</a>
+      </header>
+      <main>
+        <section class="block">
+          <div class="box">
+            <div class="hr test-hr"></div>
+            <h2>Pythonda dasturlash asoslari</h2>
+            <p>Dasturlash asoslariga oid o'zbek tilidagi ilk eng mukammal qo'llanma. Kitobning har bir bo'limi uchun maxsus video darslar yozilgan bo'lim, ularga kitobda ko'rsatilgan QR kod orqali o'tish mumkun.</p>
+            <a href="#" class="header-btn">Buyurtma berish</a>
+          </div>
+          <img class="image-book" src="./images/python-book.jpg" alt="rasm" srcset="./images/python-book-1.jpg" width="510" height="510">
+        </section>
+        <section class="block_two">
           <div class="hr"></div>
-          <h2>Pythonda dasturlash asoslari</h2>
-          <p>Dasturlash asoslariga oid o'zbek tilidagi ilk eng mukammal qo'llanma. Kitobning har bir bo'limi uchun maxsus video darslar yozilgan bo'lim, ularga kitobda ko'rsatilgan QR kod orqali o'tish mumkun.</p>
-          <a href="#" class="btn">Buyurtma berish</a>
-        </div>
-        <img src="./images/python-book.jpg" alt="rasm" srcset="./images/python-book-1.jpg" width="510" height="510" class="image">
-      </section>
-      <section class="test">
-        <div class="hr"></div>
-        <h1>Nega aynan <br> Akademnashr?</h1>
-        <div class="ftr">
-          <div class="buy">
-            <div class="icon"><img src="images/Icon_1.svg" alt="icon"></div>
-            <h3>Oson buyurtma berish</h3>
-            <p>Akademnashr.uz saytidan o'zingizga yoqqan kitobni sodda usulda buyurta qila olasiz.</p>
+          <h1>Nega aynan <br> Akademnashr?</h1>
+          <div class="ftr">
+            <div class="buy">
+              <div class="icon"><img src="images/Icon_1.svg" alt="icon"></div>
+              <h3>Oson buyurtma berish</h3>
+              <p>Akademnashr.uz saytidan o'zingizga yoqqan kitobni sodda usulda buyurta qila olasiz.</p>
+            </div>
+            <div class="buy">
+              <div class="icon"><img src="images/Icon_2.svg" alt="icon"></div>
+              <h3>Eng sara kitoblar</h3>
+              <p>Trenddagi eng ommabop  turli auditoriyalarga mo'ljallangan har xil janrdagi kitoblarni topa olasiz </p>
+            </div>
+            <div class="buy">
+              <div class="icon"><img src="images/Icon_3.svg" alt="icon"></div>
+              <h3>Tez yetkazib berish</h3>
+              <p>O'zbekistonning ixtiyoriy xududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kunida yetkazib beramiz. </p>
+            </div>
           </div>
-          <div class="buy">
-            <div class="icon"><img src="images/Icon_2.svg" alt="icon"></div>
-            <h3>Eng sara kitoblar</h3>
-            <p>Trenddagi eng ommabop  turli auditoriyalarga mo'ljallangan har xil janrdagi kitoblarni topa olasiz </p>
+        </section>
+        <section class="block_three">
+          <div class="box_three">
+            <h2>Bolalar kitoblari uchun ajoyib aksiya!</h2>
+            <p>Ertaklar, she'rlar, sarguzasht asarlar, fikrlashni o'stirish uchun turli mashq qo'llanmalari </p>
+            <p>Aksiyadagi eng katta to'plamda <span>50 ta kitob</span>ni <span>350 ming</span>  so'mga (aslida 383 ming so'm) sotib olishingiz   mumkun</p>
+            <a href="#" class="header-btn">Buyurtma berish</a>
           </div>
-          <div class="buy">
-            <div class="icon"><img src="images/Icon_3.svg" alt="icon"></div>
-            <h3>Tez yetkazib berish</h3>
-            <p>O'zbekistonning ixtiyoriy xududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kunida yetkazib beramiz. </p>
+          <img class="image-books" src="images/sale-img.jpg" alt="kitoblar" srcset="images/sale-img@2x.jpg" width="440" height="440">
+        </section>
+      </main>
+      <footer>
+          <div class="but">
+            <a href="index.html">
+              <img src="images/logo.svg" alt="logo" width="277" height="58">
+            </a>
+            <div class="to_go">
+              <ul class="footer_menyu">
+                <li>
+                  <a href=""><img src="images/icon-telegram.svg" alt="icon" width="24" height="24"></a>
+                </li>
+                <li>
+                  <a href=""><img src="images/icon-facebook.svg" alt="icon" width="24" height="24"></a>
+                </li>
+                <li>
+                  <a href=""><img src="images/icon-instagram.svg" alt="icon" width="24" height="24"></a>
+                </li>
+              </ul>
+            </div>
           </div>
-        </div>
-      </section>
-      <section class="block_two">
-        <div class="box_two">
-          <h2>Bolalar kitoblari uchun ajoyib aksiya!</h2>
-          <p>Ertaklar, she'rlar, sarguzasht asarlar, fikrlashni o'stirish uchun turli mashq qo'llanmalari </p>
-          <p>Aksiyadagi eng katta to'plamda <span>50 ta kitob</span>ni <span>350 ming</span>  so'mga (aslida 383 ming so'm) sotib olishingiz   mumkun</p>
-          <a href="#" class="btn">Buyurtma berish</a>
-        </div>
-        <img src="images/sale-img.jpg" alt="kitoblar" srcset="images/sale-img@2x.jpg" width="440" height="440" class="images">
-      </section>
-    </main>
-    <footer>
-        <div class="but">
-          <a href="index.html">
-            <img src="images/logo.svg" alt="logo" width="277" height="58">
-          </a>
-          <div class="goo">
-            <ul class="menyu">
-              <li>
-                <a href=""><img src="images/icon-telegram.svg" alt="icon" width="24" height="24"></a>
-              </li>
-              <li>
-                <a href=""><img src="images/icon-facebook.svg" alt="icon" width="24" height="24"></a>
-              </li>
-              <li>
-                <a href=""><img src="images/icon-instagram.svg" alt="icon" width="24" height="24"></a>
-              </li>
-            </ul>
+          <hr>
+          <!-- Bo'limlar -->
+          <div class="ftr">
+            <div class="content">
+              <ul>
+                <li><a href="#">Bosh sahifa</a></li>
+                <li><a href="#">Kitoblar</a></li>
+                <li><a href="#">Aksiyalar</a></li>
+                <li><a href="#">Yangiliklar</a></li>
+                <li><a href="#">Kontaktlar</a></li>
+              </ul>
+            </div>
+            <div class="content">
+              <ul>
+                <li><a href="#">Ilmiy nashirlar</a></li>
+                <li><a href="#">Ilmiy-ommabop nashirlar</a></li>
+                <li><a href="#">Ma'rifiy nashirlar</a></li>
+                <li><a href="#">Lug'atlar</a></li>
+                <li><a href="#">Adabiy-badiiy nashrlar</a></li>
+                <li><a href="#">Abiturientlar uchun</a></li>
+                <li><a href="#">Bolalar uchun</a></li>
+              </ul>
+            </div>
+            <div class="content">
+              <ul>
+                <li><a href="#">Ko'p so'raladigan savollar</a></li>
+                <li><a href="#">Yetkazib berish haqida</a></li>
+                <li><a href="#">To'lov usullari haqida</a></li>
+              </ul>
+            </div>
+            <div class="content">
+              <ul>
+                <li><a href="#">Bo'sh ish o'rinlari</a></li>
+                <li><a href="#">Biz bilan bog'lanish</a></li>
+                <li><a href="#">Maxfiylik nizomi</a></li>
+              </ul>
+            </div>
           </div>
-        </div>
-        <hr>
-        <!-- Bo'limlar -->
-        <div class="ftr">
-          <div>
-            <ul>
-              <li><a href="#">Bosh sahifa</a></li>
-              <li><a href="#">Kitoblar</a></li>
-              <li><a href="#">Aksiyalar</a></li>
-              <li><a href="#">Yangiliklar</a></li>
-              <li><a href="#">Kontaktlar</a></li>
-            </ul>
-          </div>
-          <div>
-            <ul>
-              <li><a href="#">Ilmiy nashirlar</a></li>
-              <li><a href="#">Ilmiy-ommabop nashirlar</a></li>
-              <li><a href="#">Ma'rifiy nashirlar</a></li>
-              <li><a href="#">Lug'atlar</a></li>
-              <li><a href="#">Adabiy-badiiy nashrlar</a></li>
-              <li><a href="#">Abiturientlar uchun</a></li>
-              <li><a href="#">Bolalar uchun</a></li>
-            </ul>
-          </div>
-          <div>
-            <ul>
-              <li><a href="#">Ko'p so'raladigan savollar</a></li>
-              <li><a href="#">Yetkazib berish haqida</a></li>
-              <li><a href="#">To'lov usullari haqida</a></li>
-            </ul>
-          </div>
-          <div>
-            <ul>
-              <li><a href="#">Bo'sh ish o'rinlari</a></li>
-              <li><a href="#">Biz bilan bog'lanish</a></li>
-              <li><a href="#">Maxfiylik nizomi</a></li>
-            </ul>
-          </div>
-        </div>
-      </footer>
+        </footer>
+    </div>
 </body>
 </html>
