Add position styles

--- a/index.html
+++ b/index.html
@@ -14,66 +14,75 @@
 <body>
     <div class="wrapper">
       <header class="sait-header">
-        <a class="sait-icon" href="index.html">
-          <img src="./images/logo.svg" alt="logo" width="277" height="58">
-        </a>
-        <div class="link-nav">
-          <nav>
-            <ul class="menyu">
-              <li class="sitenav-item"><a href="#">Bosh sahifa</a></li>
-              <li class="sitenav-item"><a href="#">Kitoblar</a></li>
-              <li class="sitenav-item"><a href="#">Aksiyalar</a></li>
-              <li class="sitenav-item"><a href="#">Kontaktlar</a></li>
-            </ul>
-          </nav>
-          <a class="btn" href="#">Ro'yxatdan o'tish</a>
+        <div class="container header-container">
+          <a class="sait-icon" href="index.html">
+            <img src="./images/logo.svg" alt="logo" width="277" height="58">
+          </a>
+          <div class="link-nav">
+            <nav>
+              <ul class="menyu">
+                <li class="sitenav-item"><a href="#">Bosh sahifa</a></li>
+                <li class="sitenav-item"><a href="#">Kitoblar</a></li>
+                <li class="sitenav-item"><a href="#">Aksiyalar</a></li>
+                <li class="sitenav-item"><a href="#">Kontaktlar</a></li>
+              </ul>
+            </nav>
+            <a class="btn" href="#">Ro'yxatdan o'tish</a>
+          </div>
         </div>
       </header>
       <!-- Saytning birinchi bo'limi -->
       <main>
         <section class="block">
-          <div class="box">
-            <div class="hr-one"></div>
-            <h2>Pythonda dasturlash asoslari</h2>
-            <p class="hero-text">Dasturlash asoslariga oid o'zbek tilidagi ilk eng mukammal qo'llanma. Kitobning har bir bo'limi uchun maxsus video darslar yozilgan bo'lim, ularga kitobda ko'rsatilgan QR kod orqali o'tish mumkun.</p>
-            <a href="#" class="btn">Buyurtma berish</a>
+          <div class="container new-container">
+            <div class="box">
+              <div class="hr-one"></div>
+              <h2>Pythonda dasturlash asoslari</h2>
+              <p class="hero-text">Dasturlash asoslariga oid o'zbek tilidagi ilk eng mukammal qo'llanma. Kitobning har bir bo'limi uchun maxsus video darslar yozilgan bo'lim, ularga kitobda ko'rsatilgan QR kod orqali o'tish mumkun.</p>
+              <a href="#" class="btn">Buyurtma berish</a>
+            </div>
+            <img class="image-book" src="./images/python-book.jpg" alt="rasm" srcset="./images/python-book-1.jpg" width="510" height="510">
           </div>
-          <img class="image-book" src="./images/python-book.jpg" alt="rasm" srcset="./images/python-book-1.jpg" width="510" height="510">
         </section>
         <section class="block_two">
-          <div class="hr-two"></div>
-          <h1>Nega aynan <br> Akademnashr?</h1>
-          <div class="ftr">
-            <div class="buy">
-              <div class="icon"><img src="images/Icon_1.svg" alt="icon"></div>
-              <h3>Oson buyurtma berish</h3>
-              <p>Akademnashr.uz saytidan o'zingizga yoqqan kitobni sodda usulda buyurta qila olasiz.</p>
-            </div>
-            <div class="buy">
-              <div class="icon"><img src="images/Icon_2.svg" alt="icon"></div>
-              <h3>Eng sara kitoblar</h3>
-              <p>Trenddagi eng ommabop  turli auditoriyalarga mo'ljallangan har xil janrdagi kitoblarni topa olasiz </p>
-            </div>
-            <div class="buy">
-              <div class="icon"><img src="images/Icon_3.svg" alt="icon"></div>
-              <h3>Tez yetkazib berish</h3>
-              <p>O'zbekistonning ixtiyoriy xududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kunida yetkazib beramiz. </p>
+          <div class="container container-feature">
+            <div class="hr-two"></div>
+            <h1>Nega aynan <br> Akademnashr?</h1>
+            <div class="ftr">
+              <div class="buy">
+                <div class="icon"><img src="images/Icon_1.svg" alt="icon"></div>
+                <h3>Oson buyurtma berish</h3>
+                <p>Akademnashr.uz saytidan o'zingizga yoqqan kitobni sodda usulda buyurta qila olasiz.</p>
+              </div>
+              <div class="buy">
+                <div class="icon"><img src="images/Icon_2.svg" alt="icon"></div>
+                <h3>Eng sara kitoblar</h3>
+                <p>Trenddagi eng ommabop  turli auditoriyalarga mo'ljallangan har xil janrdagi kitoblarni topa olasiz </p>
+              </div>
+              <div class="buy">
+                <div class="icon"><img src="images/Icon_3.svg" alt="icon"></div>
+                <h3>Tez yetkazib berish</h3>
+                <p>O'zbekistonning ixtiyoriy xududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kunida yetkazib beramiz. </p>
+              </div>
             </div>
           </div>
         </section>
         <section class="block_three">
-          <div class="box_three">
-            <h2>Bolalar kitoblari uchun ajoyib aksiya!</h2>
-            <div class="text">
-              <p>Ertaklar, she'rlar, sarguzasht asarlar, fikrlashni o'stirish uchun turli mashq qo'llanmalari </p>
-              <p>Aksiyadagi eng katta to'plamda <span>50 ta kitob</span>ni <span>350 ming</span>  so'mga (aslida 383 ming so'm) sotib olishingiz   mumkun</p>
+          <div class="container librari">
+            <div class="box_three">
+              <h2>Bolalar kitoblari uchun ajoyib aksiya!</h2>
+              <div class="text">
+                <p>Ertaklar, she'rlar, sarguzasht asarlar, fikrlashni o'stirish uchun turli mashq qo'llanmalari </p>
+                <p>Aksiyadagi eng katta to'plamda <span>50 ta kitob</span>ni <span>350 ming</span>  so'mga (aslida 383 ming so'm) sotib olishingiz   mumkun</p>
+              </div>
+              <a href="#" class="btn">Buyurtma berish</a>
             </div>
-            <a href="#" class="btn">Buyurtma berish</a>
+            <img class="image-books" src="images/sale-img.jpg" alt="kitoblar" srcset="images/sale-img@2x.jpg" width="440" height="440">
           </div>
-          <img class="image-books" src="images/sale-img.jpg" alt="kitoblar" srcset="images/sale-img@2x.jpg" width="440" height="440">
         </section>
       </main>
       <footer class="footer">
+        <div class="container">
           <div class="but">
             <a href="index.html">
               <img class="sait-icon" src="images/logo.svg" alt="logo" width="277" height="58">
@@ -130,6 +139,7 @@
               </ul>
             </div>
           </div>
+        </div>
       </footer>
     </div>
 </body>
