--- a/index.html
+++ b/index.html
@@ -12,135 +12,146 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="wrapper">
-      <header class="sait-header">
-        <div class="container header-container">
-          <a class="sait-icon" href="index.html">
-            <img src="./images/logo.svg" alt="logo" width="277" height="58">
-          </a>
-          <div class="link-nav">
-            <nav>
-              <ul class="menyu">
-                <li class="sitenav-item"><a href="#">Bosh sahifa</a></li>
-                <li class="sitenav-item"><a href="#">Kitoblar</a></li>
-                <li class="sitenav-item"><a href="#">Aksiyalar</a></li>
-                <li class="sitenav-item"><a href="#">Kontaktlar</a></li>
-              </ul>
-            </nav>
-            <a class="btn" href="#">Ro'yxatdan o'tish</a>
-          </div>
-        </div>
-      </header>
-      <!-- Saytning birinchi bo'limi -->
-      <main>
-        <section class="block">
-          <div class="container new-container">
-            <div class="box">
-              <div class="hr-one"></div>
-              <h2>Pythonda dasturlash asoslari</h2>
-              <p class="hero-text">Dasturlash asoslariga oid o'zbek tilidagi ilk eng mukammal qo'llanma. Kitobning har bir bo'limi uchun maxsus video darslar yozilgan bo'lim, ularga kitobda ko'rsatilgan QR kod orqali o'tish mumkun.</p>
-              <a href="#" class="btn">Buyurtma berish</a>
-            </div>
-            <img class="image-book" src="./images/python-book.jpg" alt="rasm" srcset="./images/python-book-1.jpg" width="510" height="510">
-          </div>
-        </section>
-        <section class="block_two">
-          <div class="container container-feature">
-            <div class="hr-two"></div>
-            <h1>Nega aynan <br> Akademnashr?</h1>
-            <div class="ftr">
-              <div class="buy">
-                <div class="icon"><img src="images/Icon_1.svg" alt="icon"></div>
-                <h3>Oson buyurtma berish</h3>
-                <p>Akademnashr.uz saytidan o'zingizga yoqqan kitobni sodda usulda buyurta qila olasiz.</p>
-              </div>
-              <div class="buy">
-                <div class="icon"><img src="images/Icon_2.svg" alt="icon"></div>
-                <h3>Eng sara kitoblar</h3>
-                <p>Trenddagi eng ommabop  turli auditoriyalarga mo'ljallangan har xil janrdagi kitoblarni topa olasiz </p>
-              </div>
-              <div class="buy">
-                <div class="icon"><img src="images/Icon_3.svg" alt="icon"></div>
-                <h3>Tez yetkazib berish</h3>
-                <p>O'zbekistonning ixtiyoriy xududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kunida yetkazib beramiz. </p>
-              </div>
-            </div>
-          </div>
-        </section>
-        <section class="block_three">
-          <div class="container librari">
-            <div class="box_three">
-              <h2>Bolalar kitoblari uchun ajoyib aksiya!</h2>
-              <div class="text">
-                <p>Ertaklar, she'rlar, sarguzasht asarlar, fikrlashni o'stirish uchun turli mashq qo'llanmalari </p>
-                <p>Aksiyadagi eng katta to'plamda <span>50 ta kitob</span>ni <span>350 ming</span>  so'mga (aslida 383 ming so'm) sotib olishingiz   mumkun</p>
-              </div>
-              <a href="#" class="btn">Buyurtma berish</a>
-            </div>
-            <img class="image-books" src="images/sale-img.jpg" alt="kitoblar" srcset="images/sale-img@2x.jpg" width="440" height="440">
-          </div>
-        </section>
-      </main>
-      <footer class="footer">
-        <div class="container">
-          <div class="but">
-            <a href="index.html">
-              <img class="sait-icon" src="images/logo.svg" alt="logo" width="277" height="58">
-            </a>
-            <div class="to_go">
-              <ul class="footer_menyu">
-                <li class="footer-link">
-                  <a href="#"><svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 0C5.376 0 0 5.376 0 12s5.376 12 12 12 12-5.376 12-12S18.624 0 12 0Zm5.568 8.16c-.18 1.896-.96 6.504-1.356 8.628-.168.9-.504 1.2-.816 1.236-.696.06-1.224-.456-1.896-.9-1.056-.696-1.656-1.128-2.676-1.8-1.188-.78-.42-1.212.264-1.908.18-.18 3.252-2.976 3.312-3.228a.24.24 0 0 0-.06-.216c-.072-.06-.168-.036-.252-.024-.108.024-1.788 1.14-5.064 3.348-.48.324-.912.492-1.296.48-.432-.012-1.248-.24-1.86-.444-.756-.24-1.344-.372-1.296-.792.024-.216.324-.432.888-.66 3.504-1.524 5.832-2.532 6.996-3.012 3.336-1.392 4.02-1.632 4.476-1.632.096 0 .324.024.468.144.12.096.156.228.168.324-.012.072.012.288 0 .456Z" fill="currentColor"/></svg></a>
-                </li>
-                <li class="footer-link">
-                  <a href="#"><svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M22.675 0H1.325C.593 0 0 .593 0 1.325v21.351C0 23.407.593 24 1.325 24H12.82v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116c.73 0 1.323-.593 1.323-1.325V1.325C24 .593 23.407 0 22.675 0Z" fill="currentColor"/></svg></a>
-                </li>
-                <li class="footer-link">
-                  <a href="#"><svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0Zm0 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069ZM5.838 12a6.162 6.162 0 1 1 12.324 0 6.162 6.162 0 0 1-12.324 0ZM12 16a4 4 0 1 1 0-8 4 4 0 0 1 0 8Zm4.965-10.405a1.44 1.44 0 1 1 2.881.001 1.44 1.44 0 0 1-2.881-.001Z" fill="currentColor"/></svg></a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <hr class="footer-hr">
-          <!-- Bo'limlar -->
-          <div class="ftr">
-            <div class="content">
-              <ul>
-                <li><a href="#">Bosh sahifa</a></li>
-                <li><a href="#">Kitoblar</a></li>
-                <li><a href="#">Aksiyalar</a></li>
-                <li><a href="#">Yangiliklar</a></li>
-                <li><a href="#">Kontaktlar</a></li>
-              </ul>
-            </div>
-            <div class="content">
-              <ul>
-                <li><a href="#">Ilmiy nashirlar</a></li>
-                <li><a href="#">Ilmiy-ommabop nashirlar</a></li>
-                <li><a href="#">Ma'rifiy nashirlar</a></li>
-                <li><a href="#">Lug'atlar</a></li>
-                <li><a href="#">Adabiy-badiiy nashrlar</a></li>
-                <li><a href="#">Abiturientlar uchun</a></li>
-                <li><a href="#">Bolalar uchun</a></li>
-              </ul>
-            </div>
-            <div class="content">
-              <ul>
-                <li><a href="#">Ko'p so'raladigan savollar</a></li>
-                <li><a href="#">Yetkazib berish haqida</a></li>
-                <li><a href="#">To'lov usullari haqida</a></li>
-              </ul>
-            </div>
-            <div class="content">
-              <ul>
-                <li><a href="#">Bo'sh ish o'rinlari</a></li>
-                <li><a href="#">Biz bilan bog'lanish</a></li>
-                <li><a href="#">Maxfiylik nizomi</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </footer>
+
+  <!-- SITE-HEADER -->
+  <header class="header">
+    <div class="container header-container">
+      <a class="header__icon" href="index.html">
+        <img src="./images/logo.svg" alt="logo" width="277" height="58">
+      </a>
+      <div class="header__link-nav">
+        <nav class="header__sitenav">
+          <ul class="header__list">
+            <li class="header__item"><a href="#">Bosh sahifa</a></li>
+            <li class="header__item"><a href="#">Kitoblar</a></li>
+            <li class="header__item"><a href="#">Aksiyalar</a></li>
+            <li class="header__item"><a href="#">Kontaktlar</a></li>
+          </ul>
+        </nav>
+        <a class="header__button btn" href="#">Ro'yxatdan o'tish</a>
+      </div>
     </div>
+  </header>
+
+
+  <!-- Saytning birinchi bo'limi -->
+
+  <main>
+    <section class="hero">
+      <div class="container hero__container">
+        <div class="hero__box">
+          <div class="hero__hr-one"></div>
+          <h2>Pythonda dasturlash asoslari</h2>
+          <p class="hero__text">Dasturlash asoslariga oid o'zbek tilidagi ilk eng mukammal qo'llanma. Kitobning har bir bo'limi uchun maxsus video darslar yozilgan bo'lim, ularga kitobda ko'rsatilgan QR kod orqali o'tish mumkun.</p>
+          <a class="hero__button btn" href="#">Buyurtma berish</a>
+        </div>
+        <img class="hero__image" src="./images/python-book.jpg" alt="rasm" srcset="./images/python-book-1.jpg" width="510" height="510">
+      </div>
+    </section>
+    <section class="feature">
+      <div class="feature__container container">
+        <div class="feature__hr"></div>
+        <h2 class="feature__heading">Nega aynan <br> Akademnashr?</h2>
+        <div class="feature__content">
+          <div class="feature__box">
+            <div class="feature__icon"><img src="images/Icon_1.svg" alt="icon"></div>
+            <h3 class="feature__title">Oson buyurtma berish</h3>
+            <p class="feature__text">Akademnashr.uz saytidan o'zingizga yoqqan kitobni sodda usulda buyurta qila olasiz.</p>
+          </div>
+          <div class="feature__box">
+            <div class="feature__icon"><img src="images/Icon_2.svg" alt="icon"></div>
+            <h3 class="feature__title">Eng sara kitoblar</h3>
+            <p class="feature__text">Trenddagi eng lorem ommabop  turli auditoriyalarga mo'ljallangan har xil janrdagi kitoblarni topa olasiz </p>
+          </div>
+          <div class="feature__box">
+            <div class="feature__icon"><img src="images/Icon_3.svg" alt="icon"></div>
+            <h3 class="feature__title">Tez yetkazib berish</h3>
+            <p class="feature__text">O'zbekistonning ixtiyoriy xududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kunida yetkazib beramiz. </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="action">
+      <div class="container action__container">
+        <div class="action__box">
+          <h2>Bolalar kitoblari uchun ajoyib aksiya!</h2>
+          <div class="action__text">
+            <p>Ertaklar, she'rlar, sarguzasht asarlar, fikrlashni o'stirish uchun turli mashq qo'llanmalari </p>
+            <p>Aksiyadagi eng katta to'plamda <span>50 ta kitob</span>ni <span>350 ming</span>  so'mga (aslida 383 ming so'm) sotib olishingiz   mumkun</p>
+          </div>
+          <a class="action__btn btn" href="#">Buyurtma berish</a>
+        </div>
+        <img class="action__image-books" src="images/sale-img.jpg" alt="kitoblar" srcset="images/sale-img@2x.jpg" width="440" height="440">
+      </div>
+    </section>
+  </main>
+
+
+  <!-- SITE FOOTER -->
+
+  <footer class="footer">
+    <div class="container footer__container">
+      <div class="contact">
+        <a class="header__icon" href="index.html">
+          <img src="images/logo.svg" alt="logo" width="277" height="58">
+        </a>
+        <div class="contact__block">
+          <ul class="contact__menu">
+            <li class="contact__link">
+              <a href="#"><svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 0C5.376 0 0 5.376 0 12s5.376 12 12 12 12-5.376 12-12S18.624 0 12 0Zm5.568 8.16c-.18 1.896-.96 6.504-1.356 8.628-.168.9-.504 1.2-.816 1.236-.696.06-1.224-.456-1.896-.9-1.056-.696-1.656-1.128-2.676-1.8-1.188-.78-.42-1.212.264-1.908.18-.18 3.252-2.976 3.312-3.228a.24.24 0 0 0-.06-.216c-.072-.06-.168-.036-.252-.024-.108.024-1.788 1.14-5.064 3.348-.48.324-.912.492-1.296.48-.432-.012-1.248-.24-1.86-.444-.756-.24-1.344-.372-1.296-.792.024-.216.324-.432.888-.66 3.504-1.524 5.832-2.532 6.996-3.012 3.336-1.392 4.02-1.632 4.476-1.632.096 0 .324.024.468.144.12.096.156.228.168.324-.012.072.012.288 0 .456Z" fill="currentColor"/></svg></a>
+            </li>
+            <li class="contact__link">
+              <a href="#"><svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M22.675 0H1.325C.593 0 0 .593 0 1.325v21.351C0 23.407.593 24 1.325 24H12.82v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116c.73 0 1.323-.593 1.323-1.325V1.325C24 .593 23.407 0 22.675 0Z" fill="currentColor"/></svg></a>
+            </li>
+            <li class="contact__link">
+              <a href="#"><svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0Zm0 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069ZM5.838 12a6.162 6.162 0 1 1 12.324 0 6.162 6.162 0 0 1-12.324 0ZM12 16a4 4 0 1 1 0-8 4 4 0 0 1 0 8Zm4.965-10.405a1.44 1.44 0 1 1 2.881.001 1.44 1.44 0 0 1-2.881-.001Z" fill="currentColor"/></svg></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <hr class="footer-hr">
+
+    <!-- Bo'limlar -->
+
+      <div class="footer-link">
+        <div class="footer-link__content">
+          <ul class="footer-link__list">
+            <li class="footer-link__item"><a class="footer-link__link" href="#">Bosh sahifa</a></li>
+            <li class="footer-link__item"><a class="footer-link__link" href="#">Kitoblar</a></li>
+            <li class="footer-link__item"><a class="footer-link__link" href="#">Aksiyalar</a></li>
+            <li class="footer-link__item"><a class="footer-link__link" href="#">Yangiliklar</a></li>
+            <li class="footer-link__item"><a class="footer-link__link" href="#">Kontaktlar</a></li>
+          </ul>
+        </div>
+        <div class="footer-link__content">
+          <ul class="footer-link__list">
+            <li class="footer-link__item"><a class="footer-link__link" href="#">Ilmiy nashirlar</a></li>
+            <li class="footer-link__item"><a class="footer-link__link" href="#">Ilmiy-ommabop nashirlar</a></li>
+            <li class="footer-link__item"><a class="footer-link__link" href="#">Ma'rifiy nashirlar</a></li>
+            <li class="footer-link__item"><a class="footer-link__link" href="#">Lug'atlar</a></li>
+            <li class="footer-link__item"><a class="footer-link__link" href="#">Adabiy-badiiy nashrlar</a></li>
+            <li class="footer-link__item"><a class="footer-link__link" href="#">Abiturientlar uchun</a></li>
+            <li class="footer-link__item"><a class="footer-link__link" href="#">Bolalar uchun</a></li>
+          </ul>
+        </div>
+        <div class="footer-link__content">
+          <ul class="footer-link__list">
+            <li class="footer-link__item"><a class="footer-link__link" href="#">Ko'p so'raladigan savollar</a></li>
+            <li class="footer-link__item"><a class="footer-link__link" href="#">Yetkazib berish haqida</a></li>
+            <li class="footer-link__item"><a class="footer-link__link" href="#">To'lov usullari haqida</a></li>
+          </ul>
+        </div>
+        <div class="footer-link__content">
+          <ul class="footer-link__list">
+            <li class="footer-link__item"><a class="footer-link__link" href="#">Bo'sh ish o'rinlari</a></li>
+            <li class="footer-link__item"><a class="footer-link__link" href="#">Biz bilan bog'lanish</a></li>
+            <li class="footer-link__item"><a class="footer-link__link" href="#">Maxfiylik nizomi</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+
 </body>
 </html>
