--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
           </ul>
         </nav>
         <a class="sitenav__btn btn" href="#">Ro'yxatdan o'tish</a>
+        <button class="site-header__button open-button">
+          <img class="open-button__img" src="images/menu-burger.svg" alt="button icon" width="35" height="35">
+        </button>
       </div>
     </div>
   </header>
@@ -71,8 +74,8 @@
         </div>
       </div>
     </section>
-    <section class="main-content__action action">
-      <div class="container action__container">
+    <section class="main-content__action action container">
+      <div class="action__container">
         <div class="action__box">
           <h2>Bolalar kitoblari uchun ajoyib aksiya!</h2>
           <div class="action__text">
@@ -124,7 +127,7 @@
             <li class="content__item"><a class="content__link" href="#">Kontaktlar</a></li>
           </ul>
         </div>
-        <div class="content__content">
+        <div class="footer-link__content content">
           <ul class="content__list">
             <li class="content__item"><a class="content__link" href="#">Ilmiy nashirlar</a></li>
             <li class="content__item"><a class="content__link" href="#">Ilmiy-ommabop nashirlar</a></li>
@@ -135,14 +138,14 @@
             <li class="content__item"><a class="content__link" href="#">Bolalar uchun</a></li>
           </ul>
         </div>
-        <div class="content__content">
+        <div class="footer-link__content content">
           <ul class="content__list">
             <li class="content__item"><a class="content__link" href="#">Ko'p so'raladigan savollar</a></li>
             <li class="content__item"><a class="content__link" href="#">Yetkazib berish haqida</a></li>
             <li class="content__item"><a class="content__link" href="#">To'lov usullari haqida</a></li>
           </ul>
         </div>
-        <div class="content__content">
+        <div class="footer-link__content content">
           <ul class="content__list">
             <li class="content__item"><a class="content__link" href="#">Bo'sh ish o'rinlari</a></li>
             <li class="content__item"><a class="content__link" href="#">Biz bilan bog'lanish</a></li>
@@ -153,5 +156,6 @@
     </div>
   </footer>
 
+  <script src="js/app.js"></script>
 </body>
 </html>
