Hamburger link fixed

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <nav class="site-header__sitenav sitenav">
           <ul class="sitenav__list">
             <li class="sitenav__item"><a class="sitenav__link" href="#">Bosh sahifa</a></li>
-            <li class="sitenav__item"><a class="sitenav__link" href="#">Kitoblar</a></li>
-            <li class="sitenav__item"><a class="sitenav__link" href="#">Aksiyalar</a></li>
-            <li class="sitenav__item"><a class="sitenav__link" href="#">Kontaktlar</a></li>
+            <li class="sitenav__item"><a class="sitenav__link" href="#kitoblar">Kitoblar</a></li>
+            <li class="sitenav__item"><a class="sitenav__link" href="#aksiyalar">Aksiyalar</a></li>
+            <li class="sitenav__item"><a class="sitenav__link" href="#kontaktlar">Kontaktlar</a></li>
           </ul>
         </nav>
         <a class="site-header__btn btn" href="#">Ro'yxatdan o'tish</a>
@@ -50,7 +50,7 @@
         <img class="hero__image" src="./images/python-book.jpg" alt="rasm" srcset="./images/python-book-1.jpg" width="510" height="510">
       </div>
     </section>
-    <section class="feature">
+    <section class="feature" id="kitoblar">
       <div class="feature__container container">
         <div class="feature__hr"></div>
         <h1 class="feature__heading">Nega aynan <br> Akademnashr?</h1>
@@ -73,7 +73,7 @@
         </div>
       </div>
     </section>
-    <section class="action container">
+    <section class="action container" id="aksiyalar">
       <div class="action__container">
         <div class="action__box">
           <h2>Bolalar kitoblari uchun ajoyib aksiya!</h2>
@@ -116,7 +116,7 @@
 
     <!-- Bo'limlar -->
 
-      <div class="footer-link">
+      <div class="footer-link" id="kontaktlar">
         <div class="footer-link__content content">
           <ul class="content__list">
             <li class="content__item"><a class="content__link" href="#">Bosh sahifa</a></li>
