Header changed to fixsed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header class="site-header">
     <div class="container site-header__container">
       <a class="site-header__icon-link" href="index.html">
-        <img class="site-header__img" src="./images/logo.svg" alt="logo" width="277" height="58">
+        <img class="site-header__img" src="./images/logo.svg" alt="logo" width="227" height="58">
       </a>
       <div class="site-header__sitenav-block">
         <nav class="site-header__sitenav sitenav">
@@ -43,7 +43,7 @@
       <div class="container hero__container">
         <div class="hero__box">
           <div class="hero__hr-one"></div>
-          <h2>Pythonda dasturlash asoslari</h2>
+          <h2 class="hero__title">Pythonda dasturlash asoslari</h2>
           <p class="hero__text">Dasturlash asoslariga oid o'zbek tilidagi ilk eng mukammal qo'llanma. Kitobning har bir bo'limi uchun maxsus video darslar yozilgan bo'lim, ularga kitobda ko'rsatilgan QR kod orqali o'tish mumkun.</p>
           <a class="hero__button btn" href="#">Buyurtma berish</a>
         </div>
@@ -78,7 +78,7 @@
         <div class="action__box">
           <h2>Bolalar kitoblari uchun ajoyib aksiya!</h2>
           <div class="action__text">
-            <p>Ertaklar, she'rlar, sarguzasht asarlar, fikrlashni o'stirish uchun turli mashq qo'llanmalari </p>
+            <p>Ertaklar, she'rlar, sarguzasht asarlar, fikrlashni o'stirish uchun turli mashq qo'llanmalari va ko'mikslar</p>
             <p>Aksiyadagi eng katta to'plamda <span>50 ta kitob</span>ni <span>350 ming</span>  so'mga (aslida 383 ming so'm) sotib olishingiz   mumkun</p>
           </div>
           <a class="action__btn btn" href="#">Buyurtma berish</a>
